// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Avatar Matches Snapshot 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #F1F2F2;
  border-radius: 50%;
  color: #60666E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: var(--font-semi-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-transform: capitalize;
  font-size: 0.625rem;
  height: var(--size-1halfx);
  -webkit-letter-spacing: 0.011rem;
  -moz-letter-spacing: 0.011rem;
  -ms-letter-spacing: 0.011rem;
  letter-spacing: 0.011rem;
  width: var(--size-1halfx);
}

<div
  aria-label="AB avatar"
  class="c0"
  role="img"
>
  <span
    data-testid="avatar-initials"
  >
    AB
  </span>
</div>
`;

exports[`Avatar Matches large avatar Snapshot 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #F1F2F2;
  border-radius: 50%;
  color: #60666E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: var(--font-semi-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-transform: capitalize;
  font-size: 1.5rem;
  height: var(--size-5x);
  width: var(--size-5x);
}

<div
  aria-label="AB avatar"
  class="c0"
  role="img"
>
  <span
    data-testid="avatar-initials"
  >
    AB
  </span>
</div>
`;

exports[`Avatar Matches large avatar with image Snapshot 1`] = `
.c0 {
  border-radius: 50%;
  object-fit: cover;
  font-size: 1.5rem;
  height: var(--size-5x);
  width: var(--size-5x);
}

<img
  alt="AB avatar"
  class="c0"
  src="anImage"
/>
`;

exports[`Avatar Matches medium avatar Snapshot 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #F1F2F2;
  border-radius: 50%;
  color: #60666E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: var(--font-semi-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-transform: capitalize;
  font-size: 1rem;
  height: var(--size-3x);
  width: var(--size-3x);
}

<div
  aria-label="AB avatar"
  class="c0"
  role="img"
>
  <span
    data-testid="avatar-initials"
  >
    AB
  </span>
</div>
`;

exports[`Avatar Matches medium avatar with image Snapshot 1`] = `
.c0 {
  border-radius: 50%;
  object-fit: cover;
  font-size: 1rem;
  height: var(--size-3x);
  width: var(--size-3x);
}

<img
  alt="AB avatar"
  class="c0"
  src="anImage"
/>
`;

exports[`Avatar Matches mobile Snapshot 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #F1F2F2;
  border-radius: 50%;
  color: #60666E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: var(--font-semi-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-transform: capitalize;
  font-size: 0.75rem;
  height: var(--size-2x);
  -webkit-letter-spacing: 0.013rem;
  -moz-letter-spacing: 0.013rem;
  -ms-letter-spacing: 0.013rem;
  letter-spacing: 0.013rem;
  width: var(--size-2x);
}

<div
  aria-label="AB avatar"
  class="c0"
  role="img"
>
  <span
    data-testid="avatar-initials"
  >
    AB
  </span>
</div>
`;

exports[`Avatar Matches mobile avatar with image Snapshot 1`] = `
.c0 {
  border-radius: 50%;
  object-fit: cover;
  font-size: 0.75rem;
  height: var(--size-2x);
  -webkit-letter-spacing: 0.013rem;
  -moz-letter-spacing: 0.013rem;
  -ms-letter-spacing: 0.013rem;
  letter-spacing: 0.013rem;
  width: var(--size-2x);
}

<img
  alt="AB avatar"
  class="c0"
  src="anImage"
/>
`;

exports[`Avatar Matches mobile large avatar Snapshot 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #F1F2F2;
  border-radius: 50%;
  color: #60666E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: var(--font-semi-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-transform: capitalize;
  font-size: 1.5rem;
  height: var(--size-4halfx);
  width: var(--size-4halfx);
}

<div
  aria-label="AB avatar"
  class="c0"
  role="img"
>
  <span
    data-testid="avatar-initials"
  >
    AB
  </span>
</div>
`;

exports[`Avatar Matches mobile large avatar with image Snapshot 1`] = `
.c0 {
  border-radius: 50%;
  object-fit: cover;
  font-size: 1.5rem;
  height: var(--size-4halfx);
  width: var(--size-4halfx);
}

<img
  alt="AB avatar"
  class="c0"
  src="anImage"
/>
`;

exports[`Avatar Matches mobile medium avatar Snapshot 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #F1F2F2;
  border-radius: 50%;
  color: #60666E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: var(--font-semi-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-transform: capitalize;
  font-size: 1rem;
  height: var(--size-3x);
  width: var(--size-3x);
}

<div
  aria-label="AB avatar"
  class="c0"
  role="img"
>
  <span
    data-testid="avatar-initials"
  >
    AB
  </span>
</div>
`;

exports[`Avatar Matches mobile medium avatar with image Snapshot 1`] = `
.c0 {
  border-radius: 50%;
  object-fit: cover;
  font-size: 1rem;
  height: var(--size-3x);
  width: var(--size-3x);
}

<img
  alt="AB avatar"
  class="c0"
  src="anImage"
/>
`;

exports[`Avatar Matches mobile small avatar Snapshot 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #F1F2F2;
  border-radius: 50%;
  color: #60666E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: var(--font-semi-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-transform: capitalize;
  font-size: 0.875rem;
  height: var(--size-2halfx);
  -webkit-letter-spacing: 0.014rem;
  -moz-letter-spacing: 0.014rem;
  -ms-letter-spacing: 0.014rem;
  letter-spacing: 0.014rem;
  width: var(--size-2halfx);
}

<div
  aria-label="AB avatar"
  class="c0"
  role="img"
>
  <span
    data-testid="avatar-initials"
  >
    AB
  </span>
</div>
`;

exports[`Avatar Matches mobile small avatar with image Snapshot 1`] = `
.c0 {
  border-radius: 50%;
  object-fit: cover;
  font-size: 0.875rem;
  height: var(--size-2halfx);
  -webkit-letter-spacing: 0.014rem;
  -moz-letter-spacing: 0.014rem;
  -ms-letter-spacing: 0.014rem;
  letter-spacing: 0.014rem;
  width: var(--size-2halfx);
}

<img
  alt="AB avatar"
  class="c0"
  src="anImage"
/>
`;

exports[`Avatar Matches small avatar Snapshot 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #F1F2F2;
  border-radius: 50%;
  color: #60666E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: var(--font-semi-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-transform: capitalize;
  font-size: 0.75rem;
  height: var(--size-2x);
  -webkit-letter-spacing: 0.013rem;
  -moz-letter-spacing: 0.013rem;
  -ms-letter-spacing: 0.013rem;
  letter-spacing: 0.013rem;
  width: var(--size-2x);
}

<div
  aria-label="AB avatar"
  class="c0"
  role="img"
>
  <span
    data-testid="avatar-initials"
  >
    AB
  </span>
</div>
`;

exports[`Avatar Matches small avatar with image Snapshot 1`] = `
.c0 {
  border-radius: 50%;
  object-fit: cover;
  font-size: 0.75rem;
  height: var(--size-2x);
  -webkit-letter-spacing: 0.013rem;
  -moz-letter-spacing: 0.013rem;
  -ms-letter-spacing: 0.013rem;
  letter-spacing: 0.013rem;
  width: var(--size-2x);
}

<img
  alt="AB avatar"
  class="c0"
  src="anImage"
/>
`;

exports[`Avatar Should use bigger user icon when username is empty on mobile 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #F1F2F2;
  border-radius: 50%;
  color: #60666E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: var(--font-semi-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-transform: capitalize;
  font-size: 0.75rem;
  height: var(--size-2x);
  -webkit-letter-spacing: 0.013rem;
  -moz-letter-spacing: 0.013rem;
  -ms-letter-spacing: 0.013rem;
  letter-spacing: 0.013rem;
  width: var(--size-2x);
}

<div
  aria-label=" avatar"
  class="c0"
  role="img"
>
  <span
    data-testid="avatar-initials"
  >
    <svg
      class="lucide lucide-user"
      fill="none"
      focusable="false"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
      />
      <circle
        cx="12"
        cy="7"
        r="4"
      />
    </svg>
  </span>
</div>
`;

exports[`Avatar Should use user icon when username is empty on desktop 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #F1F2F2;
  border-radius: 50%;
  color: #60666E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: var(--font-semi-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-transform: capitalize;
  font-size: 0.625rem;
  height: var(--size-1halfx);
  -webkit-letter-spacing: 0.011rem;
  -moz-letter-spacing: 0.011rem;
  -ms-letter-spacing: 0.011rem;
  letter-spacing: 0.011rem;
  width: var(--size-1halfx);
}

<div
  aria-label=" avatar"
  class="c0"
  role="img"
>
  <span
    data-testid="avatar-initials"
  >
    <svg
      class="lucide lucide-user"
      fill="none"
      focusable="false"
      height="16"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
      />
      <circle
        cx="12"
        cy="7"
        r="4"
      />
    </svg>
  </span>
</div>
`;

exports[`Avatar Should use user icon when username is undefined 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #F1F2F2;
  border-radius: 50%;
  color: #60666E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: var(--font-semi-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-transform: capitalize;
  font-size: 0.625rem;
  height: var(--size-1halfx);
  -webkit-letter-spacing: 0.011rem;
  -moz-letter-spacing: 0.011rem;
  -ms-letter-spacing: 0.011rem;
  letter-spacing: 0.011rem;
  width: var(--size-1halfx);
}

<div
  aria-label=" avatar"
  class="c0"
  role="img"
>
  <span
    data-testid="avatar-initials"
  >
    <svg
      class="lucide lucide-user"
      fill="none"
      focusable="false"
      height="16"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
      />
      <circle
        cx="12"
        cy="7"
        r="4"
      />
    </svg>
  </span>
</div>
`;

exports[`Avatar renders custom icon when iconName is provided 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #F1F2F2;
  border-radius: 50%;
  color: #60666E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: var(--font-semi-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-transform: capitalize;
  font-size: 0.625rem;
  height: var(--size-1halfx);
  -webkit-letter-spacing: 0.011rem;
  -moz-letter-spacing: 0.011rem;
  -ms-letter-spacing: 0.011rem;
  letter-spacing: 0.011rem;
  width: var(--size-1halfx);
}

<div
  aria-label=" avatar"
  class="c0"
  role="img"
>
  <svg
    class="lucide lucide-building"
    fill="none"
    focusable="false"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 10h.01"
    />
    <path
      d="M12 14h.01"
    />
    <path
      d="M12 6h.01"
    />
    <path
      d="M16 10h.01"
    />
    <path
      d="M16 14h.01"
    />
    <path
      d="M16 6h.01"
    />
    <path
      d="M8 10h.01"
    />
    <path
      d="M8 14h.01"
    />
    <path
      d="M8 6h.01"
    />
    <path
      d="M9 22v-3a1 1 0 0 1 1-1h4a1 1 0 0 1 1 1v3"
    />
    <rect
      height="20"
      rx="2"
      width="16"
      x="4"
      y="2"
    />
  </svg>
</div>
`;
